prepared partially the code
still trying to fix api connections for  few containers

NAME                       IMAGE                                                  COMMAND                  SERVICE         CREATED          STATUS                             PORTS
cloudwatch-alert-manager   cloudwatch-pro-alert-manager                           "uvicorn main:app --…"   alert-manager   52 minutes ago   Up 52 minutes (unhealthy)          0.0.0.0:8003->8003/tcp, [::]:8003->8003/tcp
cloudwatch-api-gateway     cloudwatch-pro-api-gateway                             "uvicorn main:app --…"   api-gateway     52 minutes ago   Up 52 minutes (unhealthy)          0.0.0.0:8000->8000/tcp, [::]:8000->8000/tcp
cloudwatch-cost-analyzer   cloudwatch-pro-cost-analyzer                           "uvicorn main:app --…"   cost-analyzer   27 seconds ago   Up 20 seconds (healthy)            0.0.0.0:8004->8004/tcp, [::]:8004->8004/tcp
cloudwatch-dashboard       cloudwatch-pro-dashboard                               "/docker-entrypoint.…"   dashboard       26 seconds ago   Up 17 seconds (health: starting)   80/tcp
cloudwatch-elasticsearch   docker.elastic.co/elasticsearch/elasticsearch:8.11.0   "/bin/tini -- /usr/l…"   elasticsearch   52 minutes ago   Up 52 minutes (healthy)            0.0.0.0:9200->9200/tcp, [::]:9200->9200/tcp
cloudwatch-grafana         grafana/grafana:latest                                 "/run.sh"                grafana         27 seconds ago   Up 19 seconds                      0.0.0.0:3001->3000/tcp, [::]:3001->3000/tcp
cloudwatch-influxdb        influxdb:2.7-alpine                                    "/entrypoint.sh infl…"   influxdb        27 seconds ago   Up 21 seconds (health: starting)   0.0.0.0:8086->8086/tcp, [::]:8086->8086/tcp
cloudwatch-ml-predictor    cloudwatch-pro-ml-predictor                            "uvicorn main:app --…"   ml-predictor    27 seconds ago   Up 20 seconds (healthy)            0.0.0.0:8005->8005/tcp, [::]:8005->8005/tcp
cloudwatch-postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,5 @@
 # CloudWatch Pro - Docker Compose Configuration
 # Konfiguracja dla lokalnego developmentu
-
-version: '3.8'
-
 services:
   # Bazy danych
   postgres:
@@ -152,7 +149,7 @@ services:
       - DATABASE_URL=postgresql://cloudwatch:cloudwatch123@postgres:5432/cloudwatch_users
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - SECRET_KEY=your-super-secret-key-for-development-only
+      - SECRET_KEY=p95XE1Pd0gDTdgufD7sHhOe6BuPJCV9d3bjpAdwzCl8
     depends_on:
       - postgres
       - redis
@@ -185,6 +182,69 @@ services:
       - kafka
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - cloudwatch-network
+
+  alert-manager:
+    build:
+      context: ./services/alert-manager
+      dockerfile: Dockerfile
+    container_name: cloudwatch-alert-manager
+    ports:
+      - "8003:8003"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - LOG_LEVEL=INFO
+    depends_on:
+      - redis
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8003/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - cloudwatch-network
+
+  cost-analyzer:
+    build:
+      context: ./services/cost-analyzer
+      dockerfile: Dockerfile
+    container_name: cloudwatch-cost-analyzer
+    ports:
+      - "8004:8004"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - LOG_LEVEL=INFO
+    depends_on:
+      - redis
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8004/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - cloudwatch-network
+
+  ml-predictor:
+    build:
+      context: ./services/ml-predictor
+      dockerfile: Dockerfile
+    container_name: cloudwatch-ml-predictor
+    ports:
+      - "8005:8005"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - LOG_LEVEL=INFO
+    depends_on:
+      - redis
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8005/health"]
       interval: 30s
       timeout: 10s
       retries: 3
