--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,7 +149,8 @@ services:
       - DATABASE_URL=postgresql://cloudwatch:cloudwatch123@postgres:5432/cloudwatch_users
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - SECRET_KEY=p95XE1Pd0gDTdgufD7sHhOe6BuPJCV9d3bjpAdwzCl8
+      - SECRET_KEY=your-super-secret-key-for-development-only
+    command: uvicorn services.user-service.main:app --host 0.0.0.0 --port 8001
     depends_on:
       - postgres
       - redis
