--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,15 +1,20 @@
-echo "global:
+global:
   scrape_interval: 15s
+  evaluation_interval: 15s
+
+rule_files:
+  # - "first_rules.yml"
+  # - "second_rules.yml"
 
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
-  
-  - job_name: 'api-gateway'
+
+  - job_name: 'cost-analyzer'
     static_configs:
-      - targets: ['api-gateway:8000']
-  
-  - job_name: 'user-service'
+      - targets: ['cost-analyzer:8004']
+
+  - job_name: 'ml-predictor'
     static_configs:
-      - targets: ['user-service:8001']" > monitoring/prometheus.yml
+      - targets: ['ml-predictor:8005']
